kubernetes/apps/calvite/calvite/app/deployment-monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calvite-monitor
  labels:
    name: calvite-monitor
spec:
  selector:
    matchLabels:
      app: calvite-monitor
  replicas: 1
  template:
    metadata:
      labels:
        app: calvite-monitor
    spec:
      containers:
      - name: calvite-monitor
        image: calvinsteckphoto-admin:latest  # Replace with your image name and tag
        imagePullPolicy: Always
        dependsOn: calvite
        command: ["npm"]
        args: ["run", "monitor"]
