kubernetes/apps/calvite/calvite/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calvite
  labels:
    name: calvite
spec:
  selector:
    matchLabels:
      app: calvite 
  replicas: 1
  template:
    metadata:
      labels:
        app: calvite
    spec:
      containers:
      - name: calvite 
        image: calvinsteckphoto-admin:latest  # Replace with your image name and tag
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443 # Replace with the port your app listens on
---
apiVersion: v1
kind: Service
metadata:
  name: calvite
  labels:
    name: calvite
spec:
  #type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      port: 443
      targetPort: 443
  selector:
    name: calvite
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calvite-ingress
  labels:
    name: calvite-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: external.gs-farm.net
    kubernetes.io/ingress.class: external
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: external
  tls:
    - hosts:
        - "cgs312.gs-farm.net"
      secretName: calvite-secret
  rules:
  - host: cgs312.gs-farm.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: calvite
            port: 
              number: 443
